--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +103,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. 伯努利分布 Bernoulli Distribution"
+    "### 2. 伯努利分布 Bernoulli Distribution\n",
+    "\n",
+    "伯努利分布又称(0 - 1)分布\n",
+    "\n",
+    "设随机变量X只可能取 0 与 1 两个值，它的分布律是\n",
+    "$$ P\\{X=k\\} = p^k(1-p)^{1-k}, k=0,1 (0 < p < 1) $$\n",
+    "则称X服从以p为参数的(0 - 1)分布或两点分布。\n",
+    "\n",
+    "(0 - 1)分布的分布律也可写成\n",
+    "$$\\begin{array}{rr} \\hline\n",
+    "X &0 &1 \\\\ \\hline\n",
+    "P_k &1-p &p \\\\ \\hline\n",
+    "\\end{array}$$"
    ]
   },
   {
