--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -96,7 +96,11 @@
     "$$\\begin{array}{rr} \\hline\n",
     "X &x_1 &x_2 &... &x_n &... \\\\ \\hline\n",
     "P_k &p_1 &p_2 &... &p_n &... \\\\ \\hline\n",
-    "\\end{array}$$"
+    "\\end{array}$$\n",
+    "\n",
+    "#### 1.2 随机变量的分布函数\n",
+    "\n",
+    "#### 1.3 连续型随机变量及其概率密度"
    ]
   },
   {
@@ -142,7 +146,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. 泊松分布 Poisson Distribution"
+    "### 4. 泊松分布 Poisson Distribution\n",
+    "\n",
+    "设随机变量 X 所有可能取的值为0, 1, 2, ..., 其中$\\lambda > 0$是常数，则称 X 服从参数为$\\lambda$的泊松分布，记为$X \\sim \\pi(\\lambda)$。\n",
+    "\n",
+    "易知，$P\\{X=k\\}\\geq0,k=0,1,2,...$，且有\n",
+    "$$ \\sum_{k=0}^\\infty P\\{X=k\\} = \\sum_{k=0}^\\infty \\frac{\\lambda^{k}e^{-\\lambda}}{k!} = e^{-\\lambda}\\sum_{k=0}^\\infty \\frac{\\lambda^k}{k!} = e^{-\\lambda} \\cdot e^{\\lambda} = 1 $$\n",
+    "\n",
+    "具有泊松分布的随机变量在实际应用中是非常多的。例如，一本书一页中的印刷错误数、某地区在一天内邮递遗失的信件数、某一医院在一天内的急诊病人数、某一地区一个时间间隔内发生交通事故的次数、在一个时间间隔内某种放射性物质发出的、经过计数器的$\\alpha$粒子数等都服从泊松分布。"
    ]
   },
   {
