Continuous Random Variable and its Probability Density

--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -75,7 +75,7 @@
     "一般，若 L 是一个实数集合，将 X 在 L 上的取值写成{X ∈ L}。它表示事件 B = {e | X(e) ∈ L}，即 B 是由 S 中使得 X(e) ∈ L 的所有样本点 e 所组成的事件，此时有\n",
     "$$ P\\{X \\in L \\} = P(B) = P\\{ e | X(e) \\in L\\} $$\n",
     "\n",
-    "#### 1.1 离散型随机变量\n",
+    "#### 1.1 离散型随机变量 Discrete Random Variable\n",
     "\n",
     "有些随机变量，它全部可能取到的值是有限个或可列无限多个，这种随机变量称为**离散型随机变量**。\n",
     "\n",
@@ -118,9 +118,27 @@
     "$$F(-\\infty) = \\lim_{x \\to -\\infty} = 0, F(\\infty) = \\lim_{x \\to \\infty} = 1$$\n",
     "3. $F(x+0)=F(x)$，即F(x)是右连续的。\n",
     "\n",
-    "反之，可证具备上述是哪个\n",
+    "反之，可证具备上述性质的函数F(x)必是某个随机变量的分布函数。\n",
     "\n",
-    "#### 1.3 连续型随机变量及其概率密度"
+    "#### 1.3 连续型随机变量及其概率密度 Continuous Random Variable\n",
+    "\n",
+    "如果对于随机变量 X 的分布函数F(x)，存在非负可积函数f(x)，使对于任意实数 x 有\n",
+    "$$ F(x) = \\int_{-\\infty}^x f(t)dt $$\n",
+    "则称 X 为连续型随机变量，f(x)称为 X 的概率密度函数，简称概率密度。\n",
+    "\n",
+    "据数学分析的知识知连续型随机变量的分布函数是连续函数。\n",
+    "\n",
+    "由定义知道，概率密度f(x)具有以下性质：\n",
+    "\n",
+    "1. $f(x) \\geq 0$;\n",
+    "2. $\\int_{-\\infty}^{\\infty} f(x)dx = 1$;\n",
+    "3. 对于任意实数$x_1, x_2(x_1 \\leq x_2)$，\n",
+    "$$ P\\{x_1 < X \\leq x_2\\} = F(x_2) - F(x_1) = \\int_{x_1}^{x_2} f(x)dx $$\n",
+    "4. 若f(x)在点 x 处连续，则有$F'(x) = f(x)$\n",
+    "\n",
+    "反之，若f(x)具备性质1,2，引入$G(x) = \\int_{-\\infty}^x f(t)dt$，它是某一随机变量 X 的分布函数，f(x)是 X 的概率密度。\n",
+    "\n",
+    "由性质2知道介于曲线y=f(x)与Ox轴之间的面积等于1，由3知道 X 落在区间$(x_1, x_2]$的概率$P\\{x_1 < X \\leq x_2\\}$等于区间$(x_1, x_2]$上曲线y=f(x)之下的曲边梯形的面积。"
    ]
   },
   {
