--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -98,11 +98,11 @@
     "P_k &p_1 &p_2 &... &p_n &... \\\\ \\hline\n",
     "\\end{array}$$\n",
     "\n",
-    "#### 1.2 随机变量的分布函数\n",
+    "#### 1.2 随机变量的分布函数 Distribution Function of Random Variable\n",
     "\n",
     "对于非离散型随机变量 X，由于其可能取的值不能一一列举出来，因而就不能像离散型随机变量那样可以用分布律来描述它。另外，我们通常所遇到的非离散型随机变量取任一指定的实数值的概率都等于0。再者，在实际中，对于这样的随机变量，我们并不会对取某一特定值的概率感兴趣，而是考虑在某个区间$(x_1, x_2]$内的概率：$P\\{x_1 < X \\leq x_2 \\}$。但由于$ P\\{x_1 < X \\leq x_2 \\} = P\\{X \\leq x_2\\} - P\\{X \\leq x_1\\} $，所以我们只需要知道$ P\\{X \\leq x_2 \\} $和$ P\\{X \\leq x_1 \\} $就可以了。下面引入随机变量的分布函数的概念。\n",
     "\n",
-    "定义：设 X 是一个随机变量，x是任意实数，函数$ F(x) = P\\{X \\leq x \\}, -\\infty < x < \\infty $称为X的分布函数。\n",
+    "定义：设 X 是一个随机变量，x是任意实数，函数$ F(x) = P\\{X \\leq x \\}, -\\infty < x < \\infty $称为X的**分布函数**。\n",
     "\n",
     "对于任意实数$x_1, x_2(x_1 < x_2)$，有$P\\{x_1 < X \\leq x_2\\} = P\\{X \\leq x_2\\}-P\\{X \\leq x_1\\} = F(x_2) - F(x_1)$，因此，若已知 X 的分布函数，我们就知道 X 落在任一区间$(x_1, x_2]$上的概率，从这个意义上说，分布函数完整地描述了随机变量的统计规律性。\n",
     "\n",
@@ -120,11 +120,11 @@
     "\n",
     "反之，可证具备上述性质的函数F(x)必是某个随机变量的分布函数。\n",
     "\n",
-    "#### 1.3 连续型随机变量及其概率密度 Continuous Random Variable\n",
+    "#### 1.3 连续型随机变量及其概率密度 Continuous Random Variable and its Probability Density\n",
     "\n",
     "如果对于随机变量 X 的分布函数F(x)，存在非负可积函数f(x)，使对于任意实数 x 有\n",
     "$$ F(x) = \\int_{-\\infty}^x f(t)dt $$\n",
-    "则称 X 为连续型随机变量，f(x)称为 X 的概率密度函数，简称概率密度。\n",
+    "则称 X 为**连续型随机变量**，f(x)称为 X 的**概率密度函数**，简称**概率密度**。\n",
     "\n",
     "据数学分析的知识知连续型随机变量的分布函数是连续函数。\n",
     "\n",
@@ -198,7 +198,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. 均匀分布 Uniform Distribution"
+    "### 5. 均匀分布 Uniform Distribution\n",
+    "\n",
+    "若连续型随机变量 X 具有概率密度\n",
+    "$$ f(x) =\\left\\{\n",
+    "\\begin{aligned}\n",
+    "& \\frac{1}{b-a}, & a < x < b, \\\\\n",
+    "& 0, & 其它 \\\\\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
+    "$$\n",
+    "则称 X 在区间(a, b)上服从均匀分布，记为$X \\sim U(a, b)$"
    ]
   },
   {
