--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -215,7 +215,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. 指数分布 Exponential Distribution"
+    "### 6. 指数分布 Exponential Distribution\n",
+    "\n",
+    "若连续型随机变量 X 具有概率密度\n",
+    "$$ f(x) =\\left\\{\n",
+    "\\begin{aligned}\n",
+    "& \\frac{1}{\\theta}e^{-\\frac{x}{\\theta}}, & x > 0, \\\\\n",
+    "& 0, & 其它 \\\\\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
+    "$$\n",
+    "其中$\\theta > 0$为常数，则称 X 服从参数为$\\theta$的指数分布。"
    ]
   },
   {
