numpy function of uniform distribution

--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -41,6 +41,8 @@
     "from pandas import Series, DataFrame\n",
     "# 引入绘图包\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set_style('whitegrid')\n",
     "%matplotlib inline"
    ]
   },
@@ -215,6 +217,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**numpy.random.uniform**函数可以根据你均匀分布进行抽样："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 取a = -1, b = 0, 样本数10000\n",
+    "s = np.random.uniform(-1, 0, 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 所有样本的值均大于a(-1)\n",
+    "np.all(s >= -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 所有样本的值均小于b(0)\n",
+    "np.all(s < 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAgsAAAFoCAYAAADZ17inAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAGgVJREFUeJzt3X+0XWV95/H3TQK5kER+3IAgmmZ04RdaDZZAZHAcK01L\nhYUtDMUWrFOoRca6NNhlAYcOth0ZKtPAdCjgwqoISGGNwFDoFG1ZdZwqmh8FKYGvSoxNJZRAAiSE\nkJCc+WOf0OMleXL3ueeefX+8X2tl5Zx9nn2eb557c8/nPvvZew+0Wi0kSZL2ZFrTBUiSpPHNsCBJ\nkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkooMC5IkqciwIEmSimbU3SEiTgZuBO7P\nzLP30vYCYAnwOuAHwKcy8+5uCpUkSc2oNbMQEZ8Arga+N4K2ZwCXA78JHARcA9weEfNrVylJkhpT\n9zDEi8Ai4PERtN0PuCQzH8jMHZn5eWATcELNPiVJUoNqHYbIzGsAImIkbW/pfB4RBwJzgB/X6VOS\nJDWr9pqFUbgB+FZmfmMkjVesWDEEnAysAbaOYV2SJE02g8B84L6FCxc+M9o3G/OwEBEzqBZEHg28\nu8auJwO37LWVJEnak3OAL4/2TcY0LETEIHA3VcJ5Z2ZurLH7GoC5c+cye/bsMahOw7300kusW7eO\nww8/nJkzZzZdzpTgmPefY95/jnn/bd68maeffhran6WjNdYzC39BdQjh1MzcXnPfrQCzZ89maGio\n54Xp1bZs2cK6des48MAD2X///ZsuZ0pwzPvPMe8/x7wZ7bDQk8P4Pb0oU0Q8GhEnth+fA/wMcFYX\nQUGSJI0TtWYWIuJFoAXs035+OtDKzF1R8c3ArPbjc4GfAja0z54YaO97U2Z+aPSlS5Kkfqh76uR+\ne3l9esfjxd0WJUmSxg/vDSFJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkooMC5Ik\nqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnI\nsCBJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkopmNF2AJEljZdu2bTz00EON9X/M\nMcew7777NtZ/rxgWJEmT1kMPPcRv//5NzBma1/e+Nz3zT9zwR3D88cf3ve9eMyxIkia1OUPzOPCw\nI5suY0JzzYIkSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkqMixIkqQiT53UlNfkRVu2bt3KPvvs00jf\nkjRShgVNeU1ftOXjZx/HggUL+t63JI2UYUGiuYu27NzxMqtXr2bFihUMDg72vf/JcinaOrZt28Yj\njzzCli1bHHNphAwLUoNeeHYddz3Q4m+//+2+9z2ZLkVbx8MPP8zSLy9nztBTfe97qo65Jj7DgtSw\nqXgp2ibXiTz66KNTcsyl0TAsSOq7JteJ/MvqZbz2jf5mL9VhWJDUiKZ+u9/0zNq+9ylNdLXDQkSc\nDNwI3J+ZZ++l7UeBDwOHAd8FlmTmym4K1eTW5LT0qlWrGulXU8/OHS83+v3m4kp1q1ZYiIhPAOcB\n3xtB29OAy4CTgYeBjwH3RMSbMvPFLmrVJOa0tKaCF55dx1W3PsGcofV979vFlRqNujMLLwKLgD8F\nZu6l7fnAFzJzOUBEXEkVGE4Dbq/Z75QxlS8Q5LS0pgIXV2oiqhUWMvMagIgYSfOFwK0d+7Yi4kHg\neAwLe+QFgiRJ481YLnAcAjYO27YBmFvnTfb9lV9h5+rVPStqvFuwfTtf3byNadP7v/Z0546XmfWd\nm5l58cXsHBjoa98Ltm/nKw39u3ds38rAtBlTru+dO17mgK99hp0NzCb59Z5aX++ZrRZv3bGD6dOn\nT6mfLU2O+b5vfCNcfXXP3m+sR2/U3xXT169n2hNP9KKWCWEmcGiTBTS0mqTxf/dU5dd7amlwtdj0\nhvpt/HutoTGfPmdOT99vLMPCeqrZhU5DVIsdR2zHIYewc9OmnhU13m3fvp3nmpxZGJzG4OAgA31O\n/03+u6f0b5qz921knYpf76n19W61WuxozyxMpZ8tTY75jkMO6en7jeXoLadat3ATQERMA44FPlfn\nTbbddRdzhoZnjrHV9Gl8n/vq+kYWQD375Pf57ZMP5cwzz2T//ffva9/fXbaMj1/99Ub+3WsfuZ85\nQ2+Ycn0/++T3WbrkXY2sjvfrPbW+3lu2bOHRRx/l6KOPnlI/W5oc823PPANr1vTs/XoaFiLiUeC3\nMvObwHXArRFxK9U1Fj4BbAXu7WWfY8HT+CRJ+ld1r7PwItAC9mk/Px1oZeauqPhmYDZAZt4XEZdQ\nnflwCLAMOCUzX+pR7WPK0/gkSarUPXVyv728Pn3Y888Cn+2irldcde2NPPf8C6N5i9rW/uhx2Oct\nfe1TkqTxatzfG+KpgaNYt3N7X/v85+f+hdm1TvCcHHbueJnVq1ezYsUKBgcH+9q3l1yWpPFr3IcF\n9c8Lz67jrgda/O33v933vl2r0X9N3qfAcKipoMn/Yy+99BL77Vc8GFCLYUE/wbUaU0eT9ykwHGoq\naPL/2EEzN3PZ75zWs/czLEhTmOFQGltN/R+btXNdT99vWk/fTZIkTTqGBUmSVGRYkCRJRYYFSZJU\nZFiQJElFng0hSVNAk+f8b926tZE7L6p3DAuSNAU0ec7/c+t/yBknHsL27du9OuwEZViQpCmiyetq\n3PXABq8OO4EZFiRJY84LgE1sLnCUJElFhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElF\nhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElFhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYF\nSZJUZFiQJElFhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElFhgVJklRkWJAkSUUz6u4Q\nEfOAa4ETgE3AbZl58W7aDQCfAj4ADAGrgcsz8/bRFCxJkvqrm5mFO4C1wHxgMXB6RCzZTbv/BJwH\n/AJwAPCfgZsj4i3dlSpJkppQa2YhIo4DFgAnZeZmYHNELAU+Blw9rPmxwP/LzB+0n98bEc+09//H\n0ZUtSZL6pe5hiGOBNZn5fMe2lUBExKzMfKFj+73AtRFxDLAKeA+wH/D10RQsSZL6q25YGAI2Dtu2\nof33XOCVsJCZd0bE24B/AFrAFuADmfnjLmuVJEkN6GbNwsBIGkXEb1AtbjyOakbhfcAXImJhF31K\nkqSG1J1ZWE81u9BpiGrmYP2w7R8BPpuZK9vP/yoi7gd+A1hRt9B+arWarkCSpPGj7szCcmBeRBzc\nsW0RsCoztwxrO739p9PMmv01YmBEcyeSJE0NtcJCZj4ILAOuiIg5EXEUcCHVdReIiMci4sR287uB\nD0bEWyNiekT8InAScGfvypckSWOt9kWZgDOBG4AngeeA6zLz+vZrRwKz248vp5pZuAs4BFgDfDAz\nPRtCkqQJpHZYyMwngFP38Nr0jscvA5e1/0iSpAnKe0NIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKk\nIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLD\ngiRJKjIsSJKkIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkqMixIkqQiw4Ik\nSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkq\nMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkohl1d4iIecC1wAnAJuC2zLx4D20DuB5YBDwNXJWZ\nV3dfriRJ6rduZhbuANYC84HFwOkRsWR4o4gYBO4D/hI4GDgDOC8i3tx1tZIkqe9qzSxExHHAAuCk\nzNwMbI6IpcDHgOEzBmcBz2bm0vbzFe19JUnSBFJ3ZuFYYE1mPt+xbSXVEYdZw9r+O+AfI+LPI2Jj\nRKyKiLNHU6wkSeq/umFhCNg4bNuG9t9zh21/PfDLwFeBw4ErgC9FxDF1i5QkSc2pvcARGKjRbkVm\n3tZ+/qWIuAD4VeChLvrtm1ar6QokSRo/6s4srKeaXeg0BLTar3V6Enh22LY1wGE1++y7gZHGIUmS\npoC6YWE5MC8iDu7YtghYlZlbhrVdxasXNM4HflSzT0mS1KBaYSEzHwSWAVdExJyIOAq4kOq6C0TE\nYxFxYrv5zcDciLgkIgYj4tepFkje3LvyJUnSWOvmOgtnAkdQHWa4H/hiZl7ffu1IYDZAZq4DTqU6\nhXIDcBnw3sz84WiLliRJ/VN7gWNmPkEVAnb32vRhz78B/Gx3pUmSpPHAe0NIkqQiw4IkSSoyLEiS\npCLDgiRJKjIsSJKkIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkqMixIkqQi\nw4IkSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkIsOC\nJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJ\nKjIsSJKkIsOCJEkqMixIkqQiw4IkSSoyLEiSpCLDgiRJKjIsSJKkohl1d4iIecC1wAnAJuC2zLx4\nL/scATwK/PfM/MNuCpUkSc3oZmbhDmAtMB9YDJweEUv2ss+fAi930ZckSWpYrbAQEccBC4CLMnNz\nZj4OLAXOL+xzCnAUcM9oCpUkSc2oO7NwLLAmM5/v2LYSiIiYNbxxRAwC/xP4MLCj6yolSVJj6oaF\nIWDjsG0b2n/P3U37y4C/z8yv1y1MkiSND7UXOAIDI2kUET8NnAe8pYs+GtVqNV2BJEnjR92ZhfVU\nswudhoBW+7VO1wKfyszh28e9gRHFIUmSpoa6YWE5MC8iDu7YtghYlZlbdm1on175TuAPImJ9RKwH\nfg24KCKWj7ZoSZLUP7UOQ2TmgxGxDLgiIn4XOAK4ELgSICIeozr08C3gDcN2v4rqlMvPjLZoSZLU\nP92sWTgTuAF4EngOuC4zr2+/diQwOzNbwBOdO0XEFuD5zHxqFPVKkqQ+qx0WMvMJ4NQ9vDa9sN+5\ndfuSJEnN894QkiSpyLAgSZKKDAuSJKnIsCBJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnI\nsCBJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkooMC5IkqciwIEmSigwLkiSpyLAg\nSZKKDAuSJKnIsCBJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkooMC5IkqciwIEmS\nigwLkiSpyLAgSZKKDAuSJKnIsCBJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkopm\n1N0hIuYB1wInAJuA2zLz4j20vQBYArwO+AHwqcy8u/tyJUlSv3Uzs3AHsBaYDywGTo+IJcMbRcQZ\nwOXAbwIHAdcAt0fE/C5rlSRJDagVFiLiOGABcFFmbs7Mx4GlwPm7ab4fcElmPpCZOzLz81QzESeM\ntmhJktQ/dQ9DHAusycznO7atBCIiZmXmC7s2ZuYtnTtGxIHAHODH3RYrSZL6r+5hiCFg47BtG9p/\nz93LvjcA38rMb9TsU5IkNaj2AkdgoE7jiJgB3AgcDby7i/4kSVKD6oaF9VSzC52GgFb7tZ8QEYPA\n3cAg8M7MHD4rMS61Wk1XIEnS+FH3MMRyYF5EHNyxbRGwKjO37Kb9XwBbgZ+fKEEBYKDW3IkkSZNb\nrbCQmQ8Cy4ArImJORBwFXEh13QUi4rGIOLH9+BzgZ4CzMnN7b8uWJEn90s2ahTOpFis+CTwHXJeZ\n17dfOxKY1X58LvBTwIaIgGqtQwu4KTM/NJqiJUlS/9QOC5n5BHDqHl6b3vF48SjqkiRJ44T3hpAk\nSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElFhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElF\nhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElFhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYF\nSZJUZFiQJElFhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElFhgVJklRkWJAkSUWGBUmS\nVGRYkCRJRYYFSZJUZFiQJElFhgVJklRkWJAkSUWGBUmSVGRYkCRJRYYFSZJUZFiQJElFM+ruEBHz\ngGuBE4BNwG2ZefEe2n4U+DBwGPBdYElmruy+XEmS1G/dzCzcAawF5gOLgdMjYsnwRhFxGnAZ8H7g\ntcA9wD0RsV/X1UqSpL6rFRYi4jhgAXBRZm7OzMeBpcD5u2l+PvCFzFyemS8BVwIt4LRR1ixJkvqo\n7szCscCazHy+Y9tKICJi1rC2C9uvAZCZLeBB4PhuCpUkSc2ou2ZhCNg4bNuG9t9zgRdG0HbuCPsa\nBJj7mtrLKkZt2uuGaA1sZtbOdX3v+9A5LQZn2rd927d927d9d2/OPi/uejjYi/fr5pN4YIzaDjcf\n4D+8Y2gUb9Gt9zbQ5y5NTrzYt33bt33b9+To+xXzgW+O9k3qhoX1VDMGnYao1iKsH2Hbh0fY133A\nOcAaYGutKiVJmtoGqYLCfb14s7phYTkwLyIOzsxdhx8WAasyc8tu2i4EbgKIiGlUax4+N5KOFi5c\n+Azw5Zr1SZKkyqhnFHaptcAxMx8ElgFXRMSciDgKuJDqugtExGMRcWK7+XXAByLi7e3TJS+lmiG4\nt1fFS5KksdfNdRbOBI4AngTuB76Ymde3XzsSmA2QmfcBlwC3A88APw+c0j6NUpIkTRADrVar6Rok\nSdI45r0hJElSkWFBkiQVGRYkSVKRYUGSJBUZFiRJUpFhQZIkFfX/Lk0F7Vtg3wqsz8wT99L2fcAn\ngX8DJPDJzPza2Fc5eUTEQcD1wLuAHcBfAR/Z07UwIuJ3gI8ChwM/Bv4sM6/pU7mTQhdjfjjVBc4W\nA5uobvv+yT6VOynUHfOO/WYBjwJ/k5nnjXmhk0gX3+dnAP8FeBPwz8CfZOaIrvY7lUXEPKqLIp5A\n9fPhtsy8eA9tPwp8GDgM+C6wJDNX7q7t7oybmYWIOBv4CvC9EbR9G/BF4Peo7mJ5FXBnRLxuLGuc\nhD4H7AccTXVp7qOBP95dw4g4pf3aOZn5GuA/Ul3J8z19qnWyGPGYt90JrAYOpfrBe1JE/NwY1zjZ\n1B3zXf6Q9kXmVFudny3HAzdTXeX3AODjwJ91XA1Ye3YHsJbqHhCLgdMjYsnwRhFxGnAZ8H7gtcA9\nwD3tqyuPyLgJC8BM4O3Ad0bQ9reAezPzvszclplfprpB1fvHssDJJCIOBX4ZuCQzN2bmk8AfAedG\nxPTd7HIs8HBmLgfIzO9QjfnP9qvmia7umEfEu6hmzn4vM7dk5vcy84TM/Lu+Fj6BdfF9vmu/BcCv\nUf1Sohq6GPODgU9n5j2ZuTMz/w/Vb77/vn9VTzztmfgFwEWZuTkzHweWAufvpvn5VLOSy9uzO1dS\n3QDytJH2N27CQmZ+of1NNRILgeHTJysZJ/cDnSDeBrycmY90bFsJzAGO2k37+4Cfjoh3RcQ+EfFv\n2+3+euxLnTTqjvk7qALZ5RGxPiJ+EBEf70Odk0ndMd/lOqrDnM+NYW2TVa0xb//S9+ldz9uBYteh\nTu3ZscCazHy+Y9tKINqH0Dr9xGdmZraAB6nxmTluwkJNQ8DGYds2UB2S0MgM8eofhLvuJPqqcczM\nZcDvAl+juiHY3wGX1jnmpXpjDrweOJHqPixvAD4CfDoi3jtmFU4+dceciPgQsCMzbxzLwiax2mM+\nzGeAzcBtvSxqEtrT5yC8epxH/ZnZtwWOEXEO1e2qO29GMdB+fm5mfqnmWw70qrbJai9jfik1xjAi\n3g38N+AXqW57ehzwlYhYm5l396zoCa6XY95u+1RmLm0//+uIuBM4C3DM23r8fX4o8AfASb2scbLp\n8fd55/v+MfA+4Ocyc9to65wC6v486VrfwkJm3gLc0qO3W0+VlDoNAU/16P0nhdKYR8Ri4ICIGGhP\nScG/junuxvEC4Csdx8u/GRG3AufhB9crejzmTwLPDtu2BljUg1InjR6P+Z8AN2bmqt5XOnn0eMyJ\niAGq9SHHASdm5j/1tuJJaU+fg632ayNp+/BIO5uohyGWUx2D6XQ88O0Gapmo/oEqaR7TsW0R1VRV\n7qb99PafTjPHprRJq+6YrwLeFBH7d2ybD/xorAqchOqO+TnAB9trRNZTnXH16xHhLyIjV3fMAf4H\n1RkTBoWRWw7Mi4iDO7YtAlZl5pbdtH3lMzMiplGteRjxZ+Z4DAu7nSqJiL+JiF9tP70B+IWIeE9E\nzIyI84AjqU6/0Qhk5jPA/wL+a0QMRcTrgd8HbsjMnfCqMb8bODMi3hER09unO51FdeqORqCLMf9L\nqh+wV0bE/hFxEtUq8883UP6E1MWYvx54K9UH3TFU1wr43/zkB58K6o55RLyDKqSdmpkuKB2hzHwQ\nWEZ1CvuciDgKuJDqugtExGMdp59eB3wgIt7ePl3yUqq1Z/eOtL9xc1GmiHgMmEdV07SIeJFqOiUy\ncy3wRuAggMx8pH3M7Or2PquovtFM//VcQPXD8IfANqppxUs7Xu8c8y9FxAHAnwNHUK1UvryLtSZT\nXZ0x3xoRvwR8Fniaagr3Q5n5932teOKrM+ZPdO4YEc8DB2Xmuv6UOmmMZMwPbD8+F3gN8KOI6HyP\n/5uZvzT2pU5oZ1L98vwk1aLS6zLz+vZrR9K+Tkhm3hcRlwC3A4dQhYxT9nZhsk4DrVZr760kSdKU\nNR4PQ0iSpHHEsCBJkooMC5IkqciwIEmSigwLkiSpyLAgSZKKDAuSJKnIsCBJkooMC5IkqciwIEmS\nigwLkiSp6P8DZHGj0FDvXjAAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fbaf0389fd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 绘制样本直方图及密度函数\n",
+    "count, bins, ignored = plt.hist(s, 15, normed=True)\n",
+    "plt.plot(bins, np.ones_like(bins), linewidth=2, color='r')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 6. 指数分布 Exponential Distribution\n",
     "\n",
     "若连续型随机变量 X 具有概率密度\n",
@@ -239,21 +331,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
