--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -470,6 +470,19 @@
    "source": [
     "### 7. 正态分布 Normal Distribution"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 附:  参考资料\n",
+    "\n",
+    "本文参考了以下资料:\n",
+    "\n",
+    "1) Developers, Numpy. \"NumPy Documentation. 2013.\" (2014).\n",
+    "\n",
+    "2) 盛骤, and 谢式千. \"概率论与数理统计及其应用.\" (2004)."
+   ]
   }
  ],
  "metadata": {
