--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -475,6 +475,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "若连续型随机变量 X 的概率密度为\n",
+    "$$ f(x) = \\frac{1}{\\sqrt{2\\pi}\\sigma}e^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}, -\\infty < x < \\infty $$\n",
+    "其中$\\mu, \\sigma(\\sigma > 0)$为常数，则称 X 服从参数为$\\mu, \\sigma$的**正态分布**或**高斯（Gauss）分布**，记为$X \\sim N(\\mu, \\sigma^2)$。\n",
+    "\n",
+    "f(x)的图形具有以下性质：\n",
+    "\n",
+    "1. 曲线关于$x = \\mu$对称。这表明对于任意$h > 0$有\n",
+    "$$ P\\{\\mu - h < X \\leq \\mu \\} = P\\{\\mu < X \\leq \\mu + h\\} $$\n",
+    "\n",
+    "2. 当$x = \\mu$时取到最大值\n",
+    "$$ f(\\mu) = \\frac{1}{\\sqrt{2\\pi}\\sigma} $$\n",
+    "x离$\\mu$越远，f(x)的值越小。这表明对于同样长度的区间，当区间离$\\mu$越远，X落在这个区间上的概率越小。\n",
+    "\n",
+    "在$x = \\mu \\pm \\sigma$处曲线有拐点。曲线以Ox轴为渐近线。\n",
+    "\n",
+    "如果固定$\\sigma$，改变$\\mu$的值，则图形沿着Ox轴平移，而不改变其形状，可见正太分布的概率密度曲线y=f(x)的位置完全由参数$\\mu$所确定。$\\mu$称为位置参数。\n",
+    "\n",
+    "如果固定$\\mu$，改变$\\sigma$，由于最大值$f(\\mu)=\\frac{1}{\\sqrt{2\\pi}\\sigma}$，可知当$\\sigma$越小时图形变得越尖，因为 X 落在$\\mu$附近的概率越大。\n",
+    "\n",
+    "特别，当$\\mu = 0, \\sigma = 1$时称随机变量 X 服从标准正态分布。其概率密度和分布函数分别用$\\varphi(x), \\Phi(x)$表示，即有\n",
+    "$$ \\varphi(x) = \\frac{1}{\\sqrt{2\\pi}}e^{-\\frac{x^2}{2}} $$\n",
+    "$$ \\Phi(x) = \\frac{1}{\\sqrt{2\\pi}}\\int_{-\\infty}^{x} e^{-\\frac{x^2}{2}}dx $$\n",
+    "易知\n",
+    "$$ \\Phi(-x) = 1 - \\Phi(x) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 附:  参考资料\n",
     "\n",
     "本文参考了以下资料:\n",
