add probability mass function definition

--- a/Random Variable and its Distribution.ipynb
+++ b/Random Variable and its Distribution.ipynb
@@ -101,6 +101,8 @@
     "P_k &p_1 &p_2 &... &p_n &... \\\\ \\hline\n",
     "\\end{array}$$\n",
     "\n",
+    "将分布律写成函数的形式，表示离散型随机变量在各特定取值上的概率，该函数称为**概率质量函数 Probability Mass Function, pmf**。\n",
+    "\n",
     "#### 1.2 随机变量的分布函数 Distribution Function of Random Variable\n",
     "\n",
     "对于非离散型随机变量 X，由于其可能取的值不能一一列举出来，因而就不能像离散型随机变量那样可以用分布律来描述它。另外，我们通常所遇到的非离散型随机变量取任一指定的实数值的概率都等于0。再者，在实际中，对于这样的随机变量，我们并不会对取某一特定值的概率感兴趣，而是考虑在某个区间$(x_1, x_2]$内的概率：$P\\{x_1 < X \\leq x_2 \\}$。但由于$ P\\{x_1 < X \\leq x_2 \\} = P\\{X \\leq x_2\\} - P\\{X \\leq x_1\\} $，所以我们只需要知道$ P\\{X \\leq x_2 \\} $和$ P\\{X \\leq x_1 \\} $就可以了。下面引入随机变量的分布函数的概念。\n",
@@ -265,12 +267,15 @@
    "source": [
     "### 4. 泊松分布 Poisson Distribution\n",
     "\n",
-    "设随机变量 X 所有可能取的值为0, 1, 2, ..., 其中$\\lambda > 0$是常数，则称 X 服从参数为$\\lambda$的泊松分布，记为$X \\sim \\pi(\\lambda)$。\n",
+    "设随机变量 X 所有可能取的值为0, 1, 2, ..., 而取各个值的概率为\n",
+    "$$P\\{X=k\\} = \\frac{\\lambda^ke^{-\\lambda}}{k!}, k=0,1,2,...,$$\n",
+    "\n",
+    "其中 $\\lambda > 0$ 是常数，则称 $X$ 服从参数为 $\\lambda$ 的泊松分布，记为 $X \\sim \\pi(\\lambda)$。\n",
     "\n",
     "易知，$P\\{X=k\\}\\geq0,k=0,1,2,...$，且有\n",
     "$$ \\sum_{k=0}^\\infty P\\{X=k\\} = \\sum_{k=0}^\\infty \\frac{\\lambda^{k}e^{-\\lambda}}{k!} = e^{-\\lambda}\\sum_{k=0}^\\infty \\frac{\\lambda^k}{k!} = e^{-\\lambda} \\cdot e^{\\lambda} = 1 $$\n",
     "\n",
-    "具有泊松分布的随机变量在实际应用中是非常多的。例如，一本书一页中的印刷错误数、某地区在一天内邮递遗失的信件数、某一医院在一天内的急诊病人数、某一地区一个时间间隔内发生交通事故的次数、在一个时间间隔内某种放射性物质发出的、经过计数器的$\\alpha$粒子数等都服从泊松分布。"
+    "具有泊松分布的随机变量在实际应用中是非常多的。例如，一本书一页中的印刷错误数、某地区在一天内邮递遗失的信件数、某一医院在一天内的急诊病人数、某一地区一个时间间隔内发生交通事故的次数、在一个时间间隔内某种放射性物质发出的、经过计数器的 $\\alpha$ 粒子数等都服从泊松分布。"
    ]
   },
   {
