comparison between probability and likelyhood

--- a/Parameter Estimation.ipynb
+++ b/Parameter Estimation.ipynb
@@ -11,6 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**统计推断 Statistical Inference**，是研究如何根据样本数据去推断总体数据特征的方法。它是在对样本数据进行描述的基础上，对统计总体的未知数量特征做出以概率形式表述的推断。\n",
+    "\n",
+    "统计学中，统计推断与**描述统计 Descriptive Statistics**相对应。\n",
+    "\n",
     "统计推断的基本问题可以分为两大类，一类是估计问题，另一类是假设检验问题。\n",
     "\n",
     "本章包括以下内容：\n",
@@ -107,7 +111,9 @@
     "\n",
     "这样，确定最大似然估计量的问题就归结为微分学中的求最大值的问题了。\n",
     "\n",
-    "在很多情况下，$p(x; \\theta)$ 和 $f(x; \\theta)$ 关于 $\\theta$ 可微，这时 $\\hat{\\theta}$ 常可从方程 $\\frac{d}{d\\theta}L(\\theta) = 0$ 解得。又因 $L(\\theta)$ 与 $lnL(\\theta)$ 在同一 $\\theta$ 处取得极值，因此，$\\theta$ 的最大似然估计值 $\\theta$ 也可以从方程 $\\frac{d}{d\\theta}lnL(\\theta) = 0$ 求得，这一方程称为对数似然方程，从对数似然方程求解往往比较方便。"
+    "在很多情况下，$p(x; \\theta)$ 和 $f(x; \\theta)$ 关于 $\\theta$ 可微，这时 $\\hat{\\theta}$ 常可从方程 $\\frac{d}{d\\theta}L(\\theta) = 0$ 解得。又因 $L(\\theta)$ 与 $lnL(\\theta)$ 在同一 $\\theta$ 处取得极值，因此，$\\theta$ 的最大似然估计值 $\\theta$ 也可以从方程 $\\frac{d}{d\\theta}lnL(\\theta) = 0$ 求得，这一方程称为**对数似然方程**，从对数似然方程求解往往比较方便。\n",
+    "\n",
+    "总结：**似然性**与**概率**意思相近，都是指某种事件发生的可能性。但是在统计学中，**似然性**与**概率**又有明确的区分。概率用于在已知一些参数的情况下，预测接下来的观测所得到的结果，而似然性则是用于在已知某些观测所得到的结果时，对有关事物的性质的参数进行估计。"
    ]
   },
   {
