add mathematical properties of random variable to readme index

--- a/Mathematical Properties of Random Variable.ipynb
+++ b/Mathematical Properties of Random Variable.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 随机变量及其数字特征 Random Variable and its Mathematical Properties\n",
+    "# 随机变量及其数字特征 Mathematical Properties of Random Variables\n",
     "\n",
     "由随机变量的分布所确定的，能刻画随机变量某一方面的特征的常数统称为数字特征，它在理论和实际应用中都很重要。本章将介绍几个重要的数字特征：数学期望、方差、相关系数和矩。\n",
     "\n",
