--- a/Mathematical Properties of Random Variable.ipynb
+++ b/Mathematical Properties of Random Variable.ipynb
@@ -97,6 +97,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 协方差及相关系数 Covariance and Correlation\n",
+    "\n",
+    "**定义** 量 $E\\{[X-E(X)][Y-E(Y)]\\}$ 称为随机变量 $X$ 与 $Y$ 的协方差。记为 $Cov(X, Y)$，即\n",
+    "$$ Cov(X, Y) = E\\{[X-E(X)][Y-E(Y)]\\} $$\n",
+    "而\n",
+    "$$ \\rho = \\frac{Cov(X, Y)}{\\sqrt{D(X)}\\sqrt{D(Y)}} $$\n",
+    "称为随机变量 $X$ 与 $Y$ 的相关系数。\n",
+    "\n",
+    "由定义，即知\n",
+    "$$ Cov(X, Y) = Cov(Y, X), Cov(X, X) = D(X) $$\n",
+    "\n",
+    "对于任意两个随机变量 $X$ 和 $Y$，下列等式成立：\n",
+    "$$ D(X+Y) = D(X) + D(Y) + 2Cov(X,Y) $$\n",
+    "\n",
+    "由 $Cov(X,Y)$ 的定义式展开，易得\n",
+    "$$ Cov(X,Y) = E(XY) - E(X)E(Y) $$\n",
+    "\n",
+    "**协方差具有下述性质**：\n",
+    "\n",
+    "1) $Cov(aX, bY) = abCov(X, Y)$, a, b是常数。\n",
+    "\n",
+    "2) $Cov(X_1 + X_2, Y) = Cov(X_1, Y) + Cov(X_2, Y)$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 矩、协方差矩阵 Moment, Covariance Matrix\n",
+    "\n",
+    "Todo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
