--- a/Mathematical Properties of Random Variable.ipynb
+++ b/Mathematical Properties of Random Variable.ipynb
@@ -102,11 +102,11 @@
    "source": [
     "### 3. 协方差及相关系数 Covariance and Correlation\n",
     "\n",
-    "**定义** 量 $E\\{[X-E(X)][Y-E(Y)]\\}$ 称为随机变量 $X$ 与 $Y$ 的协方差。记为 $Cov(X, Y)$，即\n",
+    "**定义** 量 $E\\{[X-E(X)][Y-E(Y)]\\}$ 称为随机变量 $X$ 与 $Y$ 的**协方差 Covariance**。记为 $Cov(X, Y)$，即\n",
     "$$ Cov(X, Y) = E\\{[X-E(X)][Y-E(Y)]\\} $$\n",
     "而\n",
     "$$ \\rho = \\frac{Cov(X, Y)}{\\sqrt{D(X)}\\sqrt{D(Y)}} $$\n",
-    "称为随机变量 $X$ 与 $Y$ 的相关系数。\n",
+    "称为随机变量 $X$ 与 $Y$ 的**相关系数 Correlation**。\n",
     "\n",
     "由定义，即知\n",
     "$$ Cov(X, Y) = Cov(Y, X), Cov(X, X) = D(X) $$\n",
@@ -121,7 +121,17 @@
     "\n",
     "1) $Cov(aX, bY) = abCov(X, Y)$, a, b是常数。\n",
     "\n",
-    "2) $Cov(X_1 + X_2, Y) = Cov(X_1, Y) + Cov(X_2, Y)$\n"
+    "2) $Cov(X_1 + X_2, Y) = Cov(X_1, Y) + Cov(X_2, Y)$\n",
+    "\n",
+    "**相关系数具有下述性质**:\n",
+    "\n",
+    "1) $|\\rho_{XY}| \\leq 1$\n",
+    "\n",
+    "2) $|\\rho_{XY}| = 1$ 的充要条件是，存在常数 $a, b$ 使 $P\\{Y=a+bX\\}=1$\n",
+    "\n",
+    "当 $|\\rho_{XY}|$ 较大时，$X, Y$ 线性相关的程度较好。当 $|\\rho_{XY}|$ 较小时，$X, Y$ 线性相关的程度较差。特别当 $|\\rho_{XY}|=1$ 时，$X, Y$ 之间以概率 $1$ 存在着线性关系。当 $|\\rho_{XY}|=0$ 时，称 $X, Y$ 不相关。\n",
+    "\n",
+    "当 $X, Y$ 相互独立时，$|\\rho_{XY}|=0$，即 $X, Y$ 不相关。反之，若 $X, Y$ 不相关，$X, Y$ 却不一定相互独立。（实际上，他们可能存在确定性的非线性关系）。不相关只是就线性关系来说的，而相互独立是就一般关系而言的。"
    ]
   },
   {
