--- a/Mathematical Properties of Random Variable.ipynb
+++ b/Mathematical Properties of Random Variable.ipynb
@@ -140,7 +140,18 @@
    "source": [
     "### 4. 矩、协方差矩阵 Moment, Covariance Matrix\n",
     "\n",
-    "Todo"
+    "**定义** 设 $X$ 和 $Y$ 是随机变量，若\n",
+    "$$ E(X^k), k=1,2,... $$\n",
+    "存在，称它为 $X$ 的**k阶原点矩**，简称**k阶矩**。若\n",
+    "$$ E\\{[X-E(X)]^k\\}, k=2,3,... $$\n",
+    "存在，称它为 $X$ 的**k阶中心矩**。若\n",
+    "$$ E(X^kY^l), k,l=1,2,... $$\n",
+    "存在，称它为 $X$ 和 $Y$ 的**k+l阶混合矩**。若\n",
+    "$$ E\\{[X-E(X)]^k[Y-E(Y)]^k\\} $$\n",
+    "存在，称它为 $X$ 和 $Y$ 的**k+l阶混合中心矩**。\n",
+    "\n",
+    "显然，$X$ 的数学期望 $E(X)$ 是 $X$ 的一阶原点矩，方差 $D(X)$ 是 $X$ 的二阶中心矩，协方差 $Cov(X, Y)$ 是 $X$ 和 $Y$ 的二阶混合中心矩。\n",
+    "\n"
    ]
   },
   {
