--- a/Mathematical Properties of Random Variable.ipynb
+++ b/Mathematical Properties of Random Variable.ipynb
@@ -151,7 +151,58 @@
     "存在，称它为 $X$ 和 $Y$ 的**k+l阶混合中心矩**。\n",
     "\n",
     "显然，$X$ 的数学期望 $E(X)$ 是 $X$ 的一阶原点矩，方差 $D(X)$ 是 $X$ 的二阶中心矩，协方差 $Cov(X, Y)$ 是 $X$ 和 $Y$ 的二阶混合中心矩。\n",
-    "\n"
+    "\n",
+    "为了介绍 $n$ 维随机变量的协方差矩阵，先从二维随机变量讲起。二维随机变量 $(X_1, X_2)$ 有四个二阶混合中心矩（设它们都存在），分别记为\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "c_{11} &= E\\{[X_1 - E(X_1)]^2\\} \\\\\n",
+    "c_{12} &= E\\{[X_1-E(X_1)][X_2-E(X_2)]\\} \\\\\n",
+    "c_{21} &= E\\{[X_2-E(X_2)][X_1-E(X_1)]\\} \\\\\n",
+    "c_{22} &= E\\{[X_2 - E(X_2)]^2\\}\n",
+    "\\end{split}\n",
+    "$$\n",
+    "\n",
+    "将它们排成矩阵的形式\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "c_{11}\\, c_{12} \\\\\n",
+    "c_{21}\\, c_{22}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "这个矩阵称为随机变量 $(X_1, X_2)$ 的**协方差矩阵 Covariance Matrix**。\n",
+    "\n",
+    "设 $n$ 维随机变量 $(X_1, X_2, ..., X_n)$ 的二阶混合中心矩 $c_{ij}=Cov(X_i, X_j)=E\\{[X_i-E(X_i)][X_j-E(X_j)]\\}, i,j=1,2,...,n$ 都存在，则称矩阵\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "c_{11} & c_{12} & \\cdot\\cdot\\cdot & c_{1n} \\\\\n",
+    "c_{21} & c_{22} & \\cdot\\cdot\\cdot & c_{2n} \\\\\n",
+    "\\vdots & \\vdots &  & \\vdots \\\\\n",
+    "c_{n1} & c_{n2} & \\cdot\\cdot\\cdot & c_{nn} \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "为 $n$ 维随机变量 $(X_1, X_2, ..., X_n)$ 的协方差矩阵。由于 $c_{ij}=c_{ji}(i \\neq j; i,j=1,2,...,n)$，因而上述矩阵是一个对称矩阵。\n",
+    "\n",
+    "一般，$n$ 维随机变量的分布是不知道的，或者是太复杂，以致在数学上不易处理，因此在实际应用中协方差矩阵就显得重要了。\n",
+    "\n",
+    "引入向量\n",
+    "$$\n",
+    "X=\\begin{bmatrix}x_1\\\\ x_2\\\\ \\vdots\\\\ x_n \\end{bmatrix}, \\mu=\\begin{bmatrix}\\mu_1\\\\ \\mu_2\\\\ \\vdots\\\\ \\mu_n  \\end{bmatrix} = \\begin{bmatrix}E(X_1)\\\\ E(X_2)\\\\ \\vdots\\\\ E(X_n) \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$n$ 维正态随机变量 $(X_1, X_2, ..., X_n)$ 的概率密度定义为\n",
+    "$$ f(x_1, x_2, ..., x_n) = \\frac{1}{(2\\pi)^{\\frac{n}{2}}(det C)^{\\frac{1}{2}}}exp\\{-\\frac{1}{2}(X-\\mu)^{T}C^{-1}(X-\\mu)\\} $$\n",
+    "其中 $C$ 是 $(X_1, X_2, ..., X_n)$ 的协方差矩阵。\n",
+    "\n",
+    "$n$ 维正态随机变量具有以下四条重要性质：\n",
+    "\n",
+    "1) $n$ 维正态随机变量 $(X_1, X_2, ..., X_n)$ 的每一个分量 $X_i, i=1,2,...,n$ 都是正态随机变量；反之，若 $(X_1, X_2, ..., X_n)$ 都是正态随机变量，且相互独立，则 $(X_1, X_2, ..., X_n)$ 是 $n$ 维正态随机变量；\n",
+    "\n",
+    "2) $n$ 维随机变量 $(X_1, X_2, ..., X_n)$ 服从 $n$ 维正态分布的充要条件是 $(X_1, X_2, ..., X_n)$ 的任意线性组合 $l_1X_1 + l_2X_2 + \\cdot\\cdot\\cdot + l_nX_n$ 服从一维正态分布（其中 $l_1, l_2,..., l_n$）不全为零。\n",
+    "\n",
+    "3) 若 $(X_1, X_2, ..., X_n)$ 服从 $n$ 维正态分布，设 $(Y_1, Y_2, ..., Y_n)$ 是 $X_j(j=1,2,...,n)$ 的线性函数，则 $(Y_1, Y_2, ..., Y_n)$ 也服从多维正态分布。这一性质称为正态变量的线性变化不变性。\n",
+    "\n",
+    "4) 设 $(X_1, X_2, ..., X_n)$ 服从 $n$ 维正态分布，则\" $(X_1, X_2, ..., X_n)$ 相互独立\"与\" $(X_1, X_2, ..., X_n)$ 两两不相关\"是等价的。"
    ]
   },
   {
